--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# isBuildModule = true  module可独立运行, false module 作为 library 合并到 宿主App
 isBuildModule=false
