--- a/webview/build.gradle
+++ b/webview/build.gradle
@@ -28,8 +28,8 @@ android {
     //统一资源前缀,规范资源引用
     resourcePrefix "web_"
 
-    dataBinding {
-        enabled true
+    buildFeatures{
+        dataBinding = true
     }
 }
 
