--- a/config.gradle
+++ b/config.gradle
@@ -33,7 +33,7 @@ ext {
     //依赖第三方配置
     dependencies = [
             "loadsir"                      : "com.kingja.loadsir:loadsir:1.3.8",
-            "gson"                         : "com.google.code.gson:gson:2.8.6",
+            "gson"                         : "com.google.code.gson:gson:2.8.7",
             "rxjava2"                      : "io.reactivex.rxjava2:rxjava:2.2.10",
             "rxpermissions"                : "com.github.tbruyelle:rxpermissions:0.10.2",
             "mmkv"                         : "com.tencent:mmkv:1.0.23",
@@ -41,7 +41,8 @@ ext {
             "immersionbar"                 : "com.gyf.immersionbar:immersionbar:3.0.0",
             "glide"                        : "com.github.bumptech.glide:glide:4.9.0",
             "glide-compiler"               : "com.github.bumptech.glide:compiler:4.9.0",
-            "arouter-api"                  : "com.alibaba:arouter-api:1.5.0",
-            "arouter-compiler"             : "com.alibaba:arouter-compiler:1.2.2",
+            "arouter-api"                  : "com.alibaba:arouter-api:1.5.1",
+            "arouter-compiler"             : "com.alibaba:arouter-compiler:1.5.1",
+            "utils"                        : "com.blankj:utilcodex:1.26.0"
     ]
 }
