--- a/module-user/build.gradle
+++ b/module-user/build.gradle
@@ -3,7 +3,7 @@ apply from: "../module.build.gradle"
 android {
     defaultConfig {
         if (isBuildModule.toBoolean()) {
-            applicationId "com.drz.user"
+            applicationId "com.ant.user"
         }
     }
     //统一资源前缀，规范资源引用
